k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grondo
  namespace: grondo
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: grondo
