k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grondo-ingress
  namespace: grondo
spec:
  rules:
    - host: dev.ingress.grondo.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grondo
                port:
                  number: 8080
